Minor bugs fixed and leaderboard screen added

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">100 Ascent</string>
+    <string name="default_notification_channel_id">all</string>
 </resources>
